--- a/Persistance-Lab/Persistance-Lab/Base.lproj/Main.storyboard
+++ b/Persistance-Lab/Persistance-Lab/Base.lproj/Main.storyboard
@@ -30,7 +30,7 @@
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gV3-D1-SLL">
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="photoCell" id="gV3-D1-SLL" customClass="PhotoCell" customModule="Persistance_Lab" customModuleProvider="target">
                                         <rect key="frame" x="10" y="0.0" width="394" height="309"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="Paw-vn-hs8">
@@ -50,6 +50,7 @@
                                         </collectionViewCellContentView>
                                         <size key="customSize" width="394" height="309"/>
                                         <connections>
+                                            <outlet property="photoImage" destination="r0a-UM-lJB" id="O9a-LM-XeA"/>
                                             <segue destination="usl-3y-zZ4" kind="show" id="TLu-ch-MRP"/>
                                         </connections>
                                     </collectionViewCell>
@@ -74,10 +75,10 @@
             </objects>
             <point key="canvasLocation" x="1305.7971014492755" y="119.86607142857142"/>
         </scene>
-        <!--View Controller-->
+        <!--Detail View Controller-->
         <scene sceneID="KdV-Gx-fE3">
             <objects>
-                <viewController id="usl-3y-zZ4" sceneMemberID="viewController">
+                <viewController id="usl-3y-zZ4" customClass="DetailViewController" customModule="Persistance_Lab" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="lKZ-op-f8M">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -142,7 +143,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="8gu-8y-ALy" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2110" y="340"/>
+            <point key="canvasLocation" x="2086" y="453"/>
         </scene>
         <!--search-->
         <scene sceneID="RlZ-AQ-5S5">
@@ -238,7 +239,7 @@
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6jv-gO-n4z" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-207" y="453"/>
+            <point key="canvasLocation" x="-143" y="453"/>
         </scene>
         <!--favorites-->
         <scene sceneID="XyQ-o9-QS5">
@@ -265,6 +266,6 @@
         <image name="magnifyingglass" catalog="system" width="64" height="56"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="JjR-aa-Qux"/>
+        <segue reference="TLu-ch-MRP"/>
     </inferredMetricsTieBreakers>
 </document>
