--- a/Persistance-Lab/Persistance-Lab/Base.lproj/Main.storyboard
+++ b/Persistance-Lab/Persistance-Lab/Base.lproj/Main.storyboard
@@ -91,13 +91,13 @@
                                 <rect key="frame" x="0.0" y="88" width="414" height="448"/>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Likes" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kfc-3D-Pby">
-                                <rect key="frame" x="20" y="546" width="41.5" height="27"/>
+                                <rect key="frame" x="20" y="546" width="41.5" height="30"/>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="favorites" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WLT-Mv-zUt">
-                                <rect key="frame" x="20" y="581" width="374" height="20.5"/>
+                                <rect key="frame" x="20" y="584" width="374" height="20.5"/>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -115,16 +115,20 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qY0-ZJ-9QZ">
-                                <rect key="frame" x="373.5" y="546" width="20.5" height="27"/>
+                                <rect key="frame" x="354" y="547.5" width="40" height="27.5"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="40" id="oNL-8x-Zsn"/>
+                                    <constraint firstAttribute="height" constant="30" id="x0R-VC-Sc1"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                 <color key="tintColor" red="1" green="0.4137047928" blue="0.86374463069999996" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                                <state key="normal" image="heart" catalog="system"/>
+                                <state key="normal" backgroundImage="heart" catalog="system"/>
                                 <connections>
                                     <action selector="addToFavorites:" destination="usl-3y-zZ4" eventType="touchUpInside" id="gBv-9m-Jni"/>
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tags" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RRp-j2-kXo">
-                                <rect key="frame" x="20" y="609.5" width="374" height="20.5"/>
+                                <rect key="frame" x="20" y="612.5" width="374" height="20.5"/>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
                                 <color key="textColor" systemColor="linkColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
@@ -160,6 +164,7 @@
                     <connections>
                         <outlet property="favoritesLabel" destination="WLT-Mv-zUt" id="jUf-Ni-x6Z"/>
                         <outlet property="imageView" destination="OPp-0H-tVx" id="BgZ-sb-3Nk"/>
+                        <outlet property="likeButton" destination="qY0-ZJ-9QZ" id="cdj-5e-cQU"/>
                         <outlet property="likesLabel" destination="Kfc-3D-Pby" id="Ua9-gd-Ktb"/>
                         <outlet property="previewURLLabel" destination="8gN-s7-w05" id="l1i-pE-2IX"/>
                         <outlet property="tagsLabel" destination="RRp-j2-kXo" id="rsH-XC-Dnw"/>
@@ -228,7 +233,7 @@
                                         <size key="customSize" width="330" height="234"/>
                                         <connections>
                                             <outlet property="photoImage" destination="nDS-zF-dZy" id="NfR-mM-ZmS"/>
-                                            <segue destination="usl-3y-zZ4" kind="show" id="VE2-Ga-sqe"/>
+                                            <segue destination="usl-3y-zZ4" kind="show" identifier="favorites" id="VE2-Ga-sqe"/>
                                         </connections>
                                     </collectionViewCell>
                                 </cells>
